--- a/src/app.css
+++ b/src/app.css
@@ -33,7 +33,14 @@
   }
   
   .btn-primary {
-    @apply bg-blue-600 text-white shadow-lg shadow-blue-200 hover:bg-blue-700 dark:bg-blue-600 dark:hover:bg-blue-500 dark:shadow-none;
+    @apply bg-blue-600 text-white shadow-lg shadow-blue-200 hover:bg-blue-700 dark:bg-blue-600 dark:hover:bg-blue-500 dark:shadow-none cursor-pointer;
+  }
+
+  button,
+  [type='button'],
+  [type='submit'],
+  [type='reset'] {
+    cursor: pointer;
   }
 
   .btn-default {
